--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="row">
-              <div class="col-lg-6">
+              <div class="col-lg-6 center">
                 <div class="deadlines__date center">5-7 ноября</div>
                 <div class="deadlines__button center">
                   <a href="#" class="button">принять участие в Интенсиве</a>
@@ -86,15 +86,11 @@
               </div>
               <div class="col-lg-6">
                 <div class="row">
-                  <div class="col-lg-6">
-                    <div class="deadlines__photo gray-bg margin">
-                      <img src="img/user1.png" alt="user">
-                    </div>
+                  <div class="col-md-6 center">
+                    <img src="img/user1.png" alt="user" class="deadlines__img">
                   </div>
-                  <div class="col-lg-6">
-                    <div class="deadlines__photo yellow-bg">
-                      <img src="img/user2.png" alt="user">
-                    </div>
+                  <div class="col-md-6 center">
+                    <img src="img/user2.png" alt="user">
                   </div>
                 </div>
               </div>
@@ -105,51 +101,45 @@
     </section>
     <section class="problems">
       <div class="container">
+        <h2 class="problems__title center">
+          Интенсив для Вас,
+          <span class="yellow-text">если Вы сталкиваетесь с такими проблемами</span>
+        </h2>
         <div class="row">
-          <div class="col-lg-11 offset-lg-1">
-            <div class="row">
-                <h2 class="problems__title center">
-                  Интенсив для Вас,
-                  <span class="yellow-text">если Вы сталкиваетесь с такими проблемами</span>
-                </h2>
-                <div class="row">
-                  <div class="col-lg-6">
-                    <div class="problems__item">
-                      <i class="icon girl"></i>
-                      <p class="problems__text">Девушки не обращают желаемого внимания на вас</p>
-                    </div>
-                  </div>
-                  <div class="col-lg-6">
-                    <div class="problems__item">
-                      <i class="icon man"></i>
-                      <p class="problems__text">Шопинг в тягость и не приносит удовольствия</p>
-                    </div>
-                  </div>
-                  <div class="col-lg-6">
-                    <div class="problems__item">
-                      <i class="icon many"></i>
-                      <p class="problems__text">Тратите деньги на одежду и не носите ее</p>
-                    </div>
-                  </div>
-                  <div class="col-lg-6">
-                    <div class="problems__item">
-                      <i class="icon hand"></i>
-                      <p class="problems__text">Ваша одежда даёт противоположный эффект на встречах  </p>
-                    </div>
-                  </div>
-                  <div class="col-lg-6">
-                    <div class="problems__item">
-                      <i class="icon time"></i>
-                      <p class="problems__text">Не хватает времени на походы по магазинам</p>
-                    </div>
-                  </div>
-                  <div class="col-lg-6">
-                    <div class="problems__item">
-                      <i class="icon shirt"></i>
-                      <p class="problems__text">Не знаете, как правильно подобрать и сочетать одежду</p>
-                    </div>
-                  </div>
-                </div>
+          <div class="col-md-6">
+            <div class="problems__item">
+              <i class="icon girl"></i>
+              <p class="problems__text">Девушки не обращают желаемого внимания на вас</p>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="problems__item">
+              <i class="icon man"></i>
+              <p class="problems__text">Шопинг в тягость и не приносит удовольствия</p>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="problems__item">
+              <i class="icon many"></i>
+              <p class="problems__text">Тратите деньги на одежду и не носите ее</p>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="problems__item">
+              <i class="icon hand"></i>
+              <p class="problems__text">Ваша одежда даёт противоположный эффект на встречах  </p>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="problems__item">
+              <i class="icon time"></i>
+              <p class="problems__text">Не хватает времени на походы по магазинам</p>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="problems__item">
+              <i class="icon shirt"></i>
+              <p class="problems__text">Не знаете, как правильно подобрать и сочетать одежду</p>
             </div>
           </div>
         </div>
@@ -158,17 +148,16 @@
     <section class="check-list">
       <div class="container">
         <div class="row">
-          <div class="col-lg-11 offset-lg-1 center">
+          <div class="offset-md-1 col-md-10 offset-md-1">
             <h2 class="center break check-list__title">
               Перед началом интенсива - настоятельно
               <span class="yellow-text">рекомендую изучить мой чек лист</span>
             </h2>
-            <div class="row">
               <div class="row">
-                <div class="col-lg-4">
-                  <div class="check-list__book"></div>
+                <div class="col-lg-4 center">
+                  <img src="img/book.png" alt="book">
                 </div>
-                <div class="col-lg-6 offset-lg-1">
+                <div class="col-lg-7">
                   <p class="check-list__text">"9 проблем в создании СТИЛЬНОГО мужского образа, КОТОРЫЕ до сих пор отталкивают от вас людей"</p>
                   <ul class="check-list__list">
                     <li>Я не сторонник раздавать свой материал БЕСПЛАТНО. Но подарив чек лист вам - мы сэкономим время в прямом эфире.</li>
@@ -180,7 +169,6 @@
                   </div>
                 </div>
               </div>
-            </div>
           </div>
         </div>
       </div>
@@ -189,19 +177,19 @@
       <div class="result__dark"></div>
       <div class="container">
         <div class="row">
-          <div class="col-lg-11 offset-lg-1 center">
+          <div class="offset-md-1 col-md-10 offset-md-1 center">
             <h2 class=" white-text result__title">
               Результат после <span class="yellow-text">прохождения интенсива</span>
             </h2>
               <div class="row justify-content-around">
-                <div class="col-lg-5">
+                <div class="col-lg-6">
                   <div class="result__item white-text">
                     <i class="icon result__icon daw"></i>
                     <p class="result__text">Освоите базовые принципы стиля, комбинирования одежды,
                       подбора аксессуаров</p>
                   </div>
                 </div>
-                <div class="col-lg-5">
+                <div class="col-lg-6">
                   <div class="result__item white-text">
                     <i class="icon result__icon daw"></i>
                     <p class="result__text">Узнаете как привлекать с первых
@@ -209,7 +197,7 @@
                       своим внешним видом</p>
                   </div>
                 </div>
-                <div class="col-lg-5">
+                <div class="col-lg-6">
                   <div class="result__item white-text margin-b">
                     <i class="icon result__icon daw"></i>
                     <p class="result__text">Узнаете как вызывать расположение
@@ -217,7 +205,7 @@
                       своим внешним видом</p>
                   </div>
                 </div>
-                <div class="col-lg-5">
+                <div class="col-lg-6">
                   <div class="result__item white-text margin-b">
                     <i class="icon result__icon daw"></i>
                     <p class="result__text">Научитесь грамотно подбирать
@@ -235,35 +223,38 @@
         <div class="row">
           <div class="col-lg-11 offset-lg-1 center">
             <h2 class="interest__title">Кому интенсив будет <span class="yellow-text">не интересен?</span></h2>
-            <div class="row">
-                <div class="col-lg-12">
-                  <div class="interest__item">
-                    <div class="interest__desc"><p>Если Вы
-                      старше 45</p>
-                      <i class="icon interest__icon man1"></i>
-                    </div>
-                    <p class="interest__text">Если вы предприниматель, собственник или топ менеджер и вам больше 45, то Вам интенсив будет полезен со стороны изучения основ и базовых элементов. Для создания конкретных образов - я работаю индивидуально. Вы можете написать мне на почту.</p>
-                  </div>
-                </div>
-                <div class="col-lg-11">
-                  <div class="interest__item">
-                    <div class="interest__desc"><p>Вы стилист и
-                      сами знаете
-                      как надо :)</p>
-                      <i class="icon interest__icon man2"></i>
-                    </div>
-                    <p class="interest__text">В этом случае, интенсив будет полезен Вам с точки зрения получения нового опыта. Я сам регулярно слежу за своими коллегами для расширения своего видения.</p>
-                  </div>
-                </div>
-                <div class="col-lg-12">
-                  <div class="interest__item">
-                    <div class="interest__desc"><p>Вы фрик. Вы так
-                      самовыражаетесь</p>
-                      <i class="icon interest__icon man3"></i>
-                    </div>
-                    <p class="interest__text">И имеете полное право на это. Но мое личное мнение - одежда для мужчины это просто фон его личностным качествам и поступкам. Важно, чтобы фон был хороший. При создании уникальных стилий - нужно применять другие правила. На интенсиве мы будем говорить о стииле со вкусом, но не о создании УНИКАЛЬНЫХ и ЭПАТАЖНЫХ ОБРАЗОВ.</p>
-                  </div>
-                </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="offset-lg-2 col-lg-10 offset-lg-1">
+            <div class="interest__item">
+              <span class="interest__explanation center">Если Вы
+                старше 45</span>
+              <div class="interest__desc">
+                <i class="icon interest__icon man1"></i>
+              </div>
+              <p class="interest__text">Если вы предприниматель, собственник или топ менеджер и вам больше 45, то Вам интенсив будет полезен со стороны изучения основ и базовых элементов. Для создания конкретных образов - я работаю индивидуально. Вы можете написать мне на почту.</p>
+            </div>
+          </div>
+          <div class="offset-lg-1 col-lg-10 offset-lg-1">
+            <div class="interest__item">
+              <span class="interest__explanation center">Вы стилист и
+                сами знаете
+                как надо :)</span>
+              <div class="interest__desc">
+                <i class="icon interest__icon man2"></i>
+              </div>
+              <p class="interest__text">В этом случае, интенсив будет полезен Вам с точки зрения получения нового опыта. Я сам регулярно слежу за своими коллегами для расширения своего видения.</p>
+            </div>
+          </div>
+          <div class="offset-lg-2 col-lg-10 offset-lg-1">
+            <div class="interest__item">
+              <span class="interest__explanation center">Вы фрик. Вы так
+                самовыражаетесь</span>
+              <div class="interest__desc">
+                <i class="icon interest__icon man3"></i>
+              </div>
+              <p class="interest__text">И имеете полное право на это. Но мое личное мнение - одежда для мужчины это просто фон его личностным качествам и поступкам. Важно, чтобы фон был хороший. При создании уникальных стилий - нужно применять другие правила. На интенсиве мы будем говорить о стииле со вкусом, но не о создании УНИКАЛЬНЫХ и ЭПАТАЖНЫХ ОБРАЗОВ.</p>
             </div>
           </div>
         </div>
@@ -272,7 +263,7 @@
     <section class="program">
       <div class="container">
         <div class="row">
-          <div class="col-lg-12 center">
+          <div class="col-md-12 center">
             <h2 class="center program__title">Что будет на Интенсиве?
               <span class="yellow-text uppercase">программа</span>
             </h2>
@@ -373,21 +364,21 @@
     <section class="experience">
       <div class="container">
         <div class="row">
-          <div class="col-lg-11 offset-lg-1 center">
+          <div class="offset-sm-1 col-md-10 offset-sm-1 center">
             <h2 class="experience__title center break">
               Лучшее доказательство моей экспертности -
               <span class="yellow-text">это Ваш опыт работы со мной</span>
             </h2>
             <p class="experience__text">А пока можете познакомиться с опытом моих учеников</p>
-            <div class="row justify-content-around">
-              <div class="col-lg-3">
-                <div class="experience__photo user1"></div>
+            <div class="row">
+              <div class="col-md-4">
+                <img src="img/uzer3.png" alt="user" class="experience__photo">
               </div>
-              <div class="col-lg-3">
-                <div class="experience__photo user2"></div>
+              <div class="col-md-4">
+                <img src="img/user4.png" alt="user" class="experience__photo">
               </div>
-              <div class="col-lg-3">
-                <div class="experience__photo user3"></div>
+              <div class="col-md-4">
+                <img src="img/user5.png" alt="user" class="experience__photo">
               </div>
             </div>
             <div class="experience__btn">
